# yt-ml-toolkit

./: CMakeLists.txt
src/: CMakeLists.txt  mnist.cpp  mnist.h  node_base.h  shape.h  throw_exception.h
src/dataset/: mnist.cpp  mnist.h
src/graph/: input.cpp  input.h  node_base.cpp  node_base.h  output.cpp  output.h  traversal.cpp  traversal.h
tests/: CMakeLists.txt  custom_matchers.h  input_test.cpp  mnist_test.cpp  node_base_test.cpp  output_test.cpp
